--- a/secondpage/secondpage.html
+++ b/secondpage/secondpage.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/firstpage.html">Главная</a></li>
+                <li><a href="/index.html">Главная</a></li>
                 <li><a href="#">Обо мне</a></li>
                 <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
