--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/firstpage/firstpage.html">Главная</a></li>
+                <li><a href="/index.html">Главная</a></li>
                 <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
                 <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
