--- a/thirdpage/thirdpage.html
+++ b/thirdpage/thirdpage.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/firstpage.html">Главная</a></li>
+                <li><a href="/index.html">Главная</a></li>
                 <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
