--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <header>
             <ul>
                 <li><a href="#">Главная</a></li>
-                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="./secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="./thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="/img/homepage/header/лого.svg" alt="Логотип">
+            <img src="./img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="./fourthpage/fourthpage.html">Цены</a></li>
                 <li><a href="#">Отзывы</a></li>
-                <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="./sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
@@ -29,58 +29,58 @@
         </header>
         <main>
             <div class="firstcolumn">
-                <img src="/img/homepage/photos/firstcolumn/1.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/2.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/3.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/4.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/5.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/6.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/7.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/8.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/9.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/10.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/11.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/12.svg" alt="">
-                <img src="/img/homepage/photos/firstcolumn/13.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/1.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/2.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/3.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/4.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/5.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/6.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/7.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/8.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/9.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/10.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/11.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/12.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/13.svg" alt="">
             </div>
             <div class="secondcolumn">
-                <img src="/img/homepage/photos/secondcolumn/1.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/2.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/3.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/4.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/5.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/6.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/7.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/8.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/9.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/10.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/11.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/12.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/13.svg" alt="">
-                <img src="/img/homepage/photos/secondcolumn/14.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/1.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/2.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/3.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/4.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/5.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/6.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/7.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/8.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/9.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/10.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/11.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/12.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/13.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/14.svg" alt="">
             </div>
-            <div class="thirdcolumn">
-                <img src="/img/homepage/photos/thirdcolumn/1.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/2.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/3.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/4.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/5.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/6.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/7.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/8.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/9.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/10.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/11.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/12.svg" alt="">
-                <img src="/img/homepage/photos/thirdcolumn/13.svg" alt="">
+            <div class="th.irdcolumn">
+                <img src="./img/homepage/photos/thirdcolumn/1.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/2.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/3.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/4.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/5.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/6.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/7.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/8.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/9.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/10.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/11.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/12.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/13.svg" alt="">
             </div>
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="./img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="./img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="./img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src=".+/img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
