--- a/secondpage/secondpage.html
+++ b/secondpage/secondpage.html
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
+                <li><a href="./index.html">Главная</a></li>
                 <li><a href="#">Обо мне</a></li>
-                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="./thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="/img/homepage/header/лого.svg" alt="Логотип">
+            <img src="./img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="./fourthpage/fourthpage.html">Цены</a></li>
                 <li><a href="#">Отзывы</a></li>
-                <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="./sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
@@ -29,7 +29,7 @@
         </header>
         <main>
             <div class="main_firstpart">
-                <img src="/img/secondpage/photo.svg" alt="photographer">
+                <img src="./img/secondpage/photo.svg" alt="photographer">
                 <div>
                     <h2>Всем привет, давайте знакомиться!</h2>
                     <h3>
@@ -78,10 +78,10 @@
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="./img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="./img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="./img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="./img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
