--- a/fourthpage/fourthpage.html
+++ b/fourthpage/fourthpage.html
@@ -12,14 +12,14 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="./index.html">Главная</a></li>
-                <li><a href="./secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="./thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="/index.html">Главная</a></li>
+                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="./img/homepage/header/лого.svg" alt="Логотип">
+            <img src="/img/homepage/header/лого.svg" alt="Логотип">
             <ul>
                 <li><a href="#">Цены</a></li>
-                <li><a href="#">Отзывы</a></li>
+                <li><a href="/fifthpage/fifthpage.html">Отзывы</a></li>
                 <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
@@ -34,47 +34,47 @@
                 <h2>900 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/secondphoto.svg" alt="">
+                <img src="/img/fourthpage/secondphoto.svg" alt="">
                 <h3>Семейная фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/thirdphoto.svg" alt="">
+                <img src="/img/fourthpage/thirdphoto.svg" alt="">
                 <h3>Детская фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/fourthphoto.svg" alt="">
+                <img src="/img/fourthpage/fourthphoto.svg" alt="">
                 <h3>Фотосессия беременности</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/fifthphoto.svg" alt="">
+                <img src="/img/fourthpage/fifthphoto.svg" alt="">
                 <h3>love story фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/sixthphoto.svg" alt="">
+                <img src="/img/fourthpage/sixthphoto.svg" alt="">
                 <h3>Годовасия фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/no_found_img.jpg" alt="">
+                <img src="/img/fourthpage/no_found_img.jpg" alt="">
                 <h3>Выписка из роддома фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="./img/fourthpage/eighthphoto.svg" alt="">
+                <img src="/img/fourthpage/eighthphoto.svg" alt="">
                 <h3>Крестины фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="./img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="./img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="./img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="./img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
