--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./img/homepage/header/лого.svg" alt="Логотип">
             <ul>
                 <li><a href="./fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="#">Отзывы</a></li>
+                <li><a href="./fifthpage/fifthpage.html">Отзывы</a></li>
                 <li><a href="./sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
