--- a/thirdpage/thirdpage.html
+++ b/thirdpage/thirdpage.html
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="./index.html">Главная</a></li>
-                <li><a href="./secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="/index.html">Главная</a></li>
+                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
-            <img src="./img/homepage/header/лого.svg" alt="Логотип">
+            <img src="/img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="./fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="./sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="/fifthpage/fifthpage.html">Отзывы</a></li>
+                <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="main_inner_secondpost"> 
-                    <img src="./img/thirdpage/secondpost_img.svg" alt="">
+                    <img src="/img/thirdpage/secondpost_img.svg" alt="">
 
                     <div>
                         <h3>Фотостудия или природа?</h3>
@@ -87,7 +87,7 @@
                         </h4>
                     </div>
 
-                    <img src="./img/thirdpage/thirdpost_img.svg" alt="">
+                    <img src="/img/thirdpage/thirdpost_img.svg" alt="">
                 </div>
 
                 <h2>
@@ -130,11 +130,11 @@
                         </h4>
                     </div>
                     
-                    <img src="./img/thirdpage/fourthpost_img.svg" alt="">
+                    <img src="/img/thirdpage/fourthpost_img.svg" alt="">
                 </div>
 
                 <div class="main_inner_fifthpost">
-                    <img src="./img/thirdpage/fifthpost_img.svg" alt="">
+                    <img src="/img/thirdpage/fifthpost_img.svg" alt="">
 
                     <div>
                         <h3>
@@ -173,17 +173,17 @@
 
                 <div class="main_inner_sixthpost">
                     <div>
-                        <img src="./img/thirdpage/sixthpost_img_1.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_2.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_3.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_4.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_1.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_2.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_3.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_4.svg" alt="">
                     </div>
 
                     <div>
-                        <img src="./img/thirdpage/sixthpost_img_5.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_6.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_7.svg" alt="">
-                        <img src="./img/thirdpage/sixthpost_img_8.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_5.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_6.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_7.svg" alt="">
+                        <img src="/img/thirdpage/sixthpost_img_8.svg" alt="">
                     </div>
 
                     <h4>Ознакомится с ценами на услуги Вы можете в разделе <a href="#">«Цены»</a></h4>
@@ -209,16 +209,16 @@
                         </h4>
                     </div>
 
-                    <img src="./img/thirdpage/seventhpost_img.svg" alt="">
+                    <img src="/img/thirdpage/seventhpost_img.svg" alt="">
                 </div>
             </div>
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="./img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="./img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="./img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="./img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
