--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="./index.html">Главная</a></li>
-                <li><a href="./secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="./thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="/index.html">Главная</a></li>
+                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="./img/homepage/header/лого.svg" alt="Логотип">
+            <img src="/img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="#">Цены</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="./sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="/fifthpage/fifthpage.html">Отзывы</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
@@ -28,7 +28,7 @@
             </div>
         </header>
         <main>
-            <img src="./img/sixthpage/photo.svg" alt="">
+            <img src="/img/sixthpage/photo.svg" alt="">
             <h1>
                 Можете связаться со мной любым удобным для Вас <br />
                 способом:
@@ -42,10 +42,10 @@
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="./img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="./img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="./img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="./img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
