--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Kseniya photographer</title>
 </head>
 <body>
 
@@ -59,7 +59,7 @@
                 <img src="./img/homepage/photos/secondcolumn/13.svg" alt="">
                 <img src="./img/homepage/photos/secondcolumn/14.svg" alt="">
             </div>
-            <div class="th.irdcolumn">
+            <div class="thirdcolumn">
                 <img src="./img/homepage/photos/thirdcolumn/1.svg" alt="">
                 <img src="./img/homepage/photos/thirdcolumn/2.svg" alt="">
                 <img src="./img/homepage/photos/thirdcolumn/3.svg" alt="">
