--- a/fifthpage/fifthpage.html
+++ b/fifthpage/fifthpage.html
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="../index.html">Главная</a></li>
+                <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
             <img src="/img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
                 <li><a href="#">Отзывы</a></li>
-                <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
