--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -12,14 +12,14 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="../index.html">Главная</a></li>
+                <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
+                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
             <img src="/img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="/fifthpage/fifthpage.html">Отзывы</a></li>
+                <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
             <div class="burger">
