--- a/secondpage/secondpage.html
+++ b/secondpage/secondpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../secondpage/style.css">
     <title>Обо мне</title>
 </head>
 <body>
@@ -12,15 +12,15 @@
     <div class="wrapper">
         <header>
             <ul>
-                <li><a href="./index.html">Главная</a></li>
+                <li><a href="../index.html">Главная</a></li>
                 <li><a href="#">Обо мне</a></li>
-                <li><a href="/thirdpage/thirdpage.html">FAQ</a></li>
+                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="/img/homepage/header/лого.svg" alt="Логотип">
+            <img src="../img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="/fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="/fifthpage/fifthpage.html">Отзывы</a></li>
-                <li><a href="/sixthpage/sixthpage.html">Контакты</a></li>
+                <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
+                <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
+                <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
             </ul>
             <div class="burger">
                 <span></span>
@@ -29,7 +29,7 @@
         </header>
         <main>
             <div class="main_firstpart">
-                <img src="/img/secondpage/photo.svg" alt="photographer">
+                <img src="../img/secondpage/photo.svg" alt="photographer">
                 <div>
                     <h2>Всем привет, давайте знакомиться!</h2>
                     <h3>
