--- a/secondpage/secondpage.html
+++ b/secondpage/secondpage.html
@@ -78,10 +78,10 @@
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
