--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../sixthpage/style.css">
     <title>Контакты</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
                 <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="/img/homepage/header/лого.svg" alt="Логотип">
+            <img src="../img/homepage/header/лого.svg" alt="Логотип">
             <ul>
                 <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
                 <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
@@ -28,7 +28,7 @@
             </div>
         </header>
         <main>
-            <img src="/img/sixthpage/photo.svg" alt="">
+            <img src="../img/sixthpage/photo.svg" alt="">
             <h1>
                 Можете связаться со мной любым удобным для Вас <br />
                 способом:
@@ -42,10 +42,10 @@
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
