--- a/fourthpage/fourthpage.html
+++ b/fourthpage/fourthpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../fourthpage/style.css">
     <title>Цены</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
                 <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
             </ul>
-            <img src="/img/homepage/header/лого.svg" alt="Логотип">
+            <img src="../img/homepage/header/лого.svg" alt="Логотип">
             <ul>
                 <li><a href="#">Цены</a></li>
                 <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
@@ -29,52 +29,52 @@
         </header>
         <main>
             <div>
-                <img src="/img/fourthpage/firstphoto.svg" alt="">
+                <img src="../img/fourthpage/firstphoto.svg" alt="">
                 <h3>Свадебная фотосессия</h3>
                 <h2>900 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/secondphoto.svg" alt="">
+                <img src="../img/fourthpage/secondphoto.svg" alt="">
                 <h3>Семейная фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/thirdphoto.svg" alt="">
+                <img src="../img/fourthpage/thirdphoto.svg" alt="">
                 <h3>Детская фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/fourthphoto.svg" alt="">
+                <img src="../img/fourthpage/fourthphoto.svg" alt="">
                 <h3>Фотосессия беременности</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/fifthphoto.svg" alt="">
+                <img src="../img/fourthpage/fifthphoto.svg" alt="">
                 <h3>love story фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/sixthphoto.svg" alt="">
+                <img src="../img/fourthpage/sixthphoto.svg" alt="">
                 <h3>Годовасия фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/no_found_img.jpg" alt="">
+                <img src="../img/fourthpage/no_found_img.jpg" alt="">
                 <h3>Выписка из роддома фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
             <div>
-                <img src="/img/fourthpage/eighthphoto.svg" alt="">
+                <img src="../img/fourthpage/eighthphoto.svg" alt="">
                 <h3>Крестины фотосессия</h3>
                 <h2>700 грн/час</h2>
             </div>
         </main>
         <footer>
             <ul class="footer_social-media">
-                <a href="#"><img src="/img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="/img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="/img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="/img/homepage/footer/mywed.svg" alt="mywed"></a>
+                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
+                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
+                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
+                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
                 
             </ul>
             <h2>
