--- a/fourthpage/fourthpage.html
+++ b/fourthpage/fourthpage.html
@@ -1,88 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../fourthpage/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../fourthpage/style.css" />
     <title>Цены</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="wrapper">
-        <header>
-            <ul>
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+      <header>
+        <ul>
+          <li><a href="../index.html">Главная</a></li>
+          <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
+          <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+        </ul>
+        <img src="../img/homepage/header/лого.svg" alt="Логотип" />
+        <ul>
+          <li><a href="#">Цены</a></li>
+          <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
+          <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
+        </ul>
+        <div onclick="burgerCross()" class="burger" id="burger">
+          <span></span> <span></span>
+        </div>
+        <div class="burger_open" id="burger_open">
+          <div class="burger_open_body">
+            <ul onclick="burgerLinks()">
+              <li>
+                <a id="burger_item" href="#">Главная</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../secondpage/secondpage.html">Обо мне</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../thirdpage/thirdpage.html">FAQ</a>
+              </li>
+              <li>
+                <a id="burger_item" href="#">Цены</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../fifthpage/fifthpage.html">Отзывы</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../sixthpage/sixthpage.html">Контакты</a>
+              </li>
             </ul>
-            <img src="../img/homepage/header/лого.svg" alt="Логотип">
-            <ul>
-                <li><a href="#">Цены</a></li>
-                <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
-                <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
-            </ul>
-            <div class="burger">
-                <span></span>
-                <span></span>
-            </div>
-        </header>
-        <main>
-            <div>
-                <img src="../img/fourthpage/firstphoto.svg" alt="">
-                <h3>Свадебная фотосессия</h3>
-                <h2>900 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/secondphoto.svg" alt="">
-                <h3>Семейная фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/thirdphoto.svg" alt="">
-                <h3>Детская фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/fourthphoto.svg" alt="">
-                <h3>Фотосессия беременности</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/fifthphoto.svg" alt="">
-                <h3>love story фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/sixthphoto.svg" alt="">
-                <h3>Годовасия фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/no_found_img.jpg" alt="">
-                <h3>Выписка из роддома фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-            <div>
-                <img src="../img/fourthpage/eighthphoto.svg" alt="">
-                <h3>Крестины фотосессия</h3>
-                <h2>700 грн/час</h2>
-            </div>
-        </main>
-        <footer>
-            <ul class="footer_social-media">
-                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
-                
-            </ul>
-            <h2>
-                Семейный и свадебный фотограф <br />
-                Ксения Крестьянинова 
-            </h2>
-            <a href="tel:+380671654104" class="footer_number">+380671654104</a>
-        </footer>
+          </div>
+        </div>
+      </header>
+      <main>
+        <div>
+          <img src="../img/fourthpage/firstphoto.svg" alt="" />
+          <h3>Свадебная фотосессия</h3>
+          <h2>900 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/secondphoto.svg" alt="" />
+          <h3>Семейная фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/thirdphoto.svg" alt="" />
+          <h3>Детская фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/fourthphoto.svg" alt="" />
+          <h3>Фотосессия беременности</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/fifthphoto.svg" alt="" />
+          <h3>love story фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/sixthphoto.svg" alt="" />
+          <h3>Годовасия фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/seventhphoto.jpg" alt="" />
+          <h3>Выписка из роддома фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+        <div>
+          <img src="../img/fourthpage/eighthphoto.svg" alt="" />
+          <h3>Крестины фотосессия</h3>
+          <h2>700 грн/час</h2>
+        </div>
+      </main>
+      <footer>
+        <ul class="footer_social-media">
+          <a href="https://instagram.com/photograf_dndz?igshid=YmMyMTA2M2Y=">
+            <img src="../img/homepage/footer/instagram.svg" alt="Инстаграм" />
+          </a>
+          <a href="https://www.facebook.com/groups/1374235009570518/?ref=share">
+            <img src="../img/homepage/footer/facebook.svg" alt="Фейсбук" />
+          </a>
+          <a href="https://t.me/ksyphotograph">
+            <img src="../img/homepage/footer/telegram.svg" alt="Телеграм" />
+          </a>
+          <a href="https://mywed.com/ru/photographer/mysja/">
+            <img src="../img/homepage/footer/mywed.svg" alt="mywed" />
+          </a>
+        </ul>
+        <h2>
+          Семейный и свадебный фотограф <br />
+          Ксения Крестьянинова
+        </h2>
+        <a href="tel:+380671654104" class="footer_number">+380671654104</a>
+      </footer>
     </div>
-</body>
+
+    <script src="../main.js"></script>
+  </body>
 </html>
