--- a/secondpage/secondpage.html
+++ b/secondpage/secondpage.html
@@ -1,95 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../secondpage/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../secondpage/style.css" />
     <title>Обо мне</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="wrapper">
-        <header>
+      <header>
+        <ul>
+          <li><a href="../index.html">Главная</a></li>
+          <li><a href="#">Обо мне</a></li>
+          <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+        </ul>
+        <img src="../img/homepage/header/лого.svg" alt="Логотип" />
+        <ul>
+          <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
+          <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
+          <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
+        </ul>
+        <div onclick="burgerCross()" class="burger" id="burger">
+          <span></span> 
+          <span></span>
+        </div>
+        <div class="burger_open" id="burger_open">
+          <div class="burger_open_body">
+            <ul onclick="burgerLinks()">
+              <li>
+                <a id="burger_item" href="../index.html">Главная</a></li>
+              <li>
+                <a id="burger_item" href="#">Обо мне</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../thirdpage/thirdpage.html">FAQ</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../fourthpage/fourthpage.html">Цены</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../fifthpage/fifthpage.html">Отзывы</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../sixthpage/sixthpage.html">Контакты</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main>
+        <div class="main_firstpart">
+          <img src="../img/secondpage/photo.svg" alt="photographer" />
+          <div>
+            <h2>Всем привет, давайте знакомиться!</h2>
+            <h3>
+              Меня зовут Ксения , я фотограф. <br />
+              В данный момент работаю в городе Каменское и Днепр. <br />
+              Обожаю снимать свадьбы, детей и семейные фотосессии! <br />
+            </h3>
+          </div>
+        </div>
+        <h1>Мой опыт и достижения</h1>
+        <div class="main_secondpart">
+          <div>
             <ul>
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="#">Обо мне</a></li>
-                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+              <li>7 лет</li>
+              <li>Занимаюсь фотографией</li>
             </ul>
-            <img src="../img/homepage/header/лого.svg" alt="Логотип">
             <ul>
-                <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
-                <li><a href="../sixthpage/sixthpage.html">Контакты</a></li>
+              <li>Участвовала</li>
+              <li>В фотовыставке “dream team”</li>
             </ul>
-            <div class="burger">
-                <span></span>
-                <span></span>
-            </div>
-        </header>
-        <main>
-            <div class="main_firstpart">
-                <img src="../img/secondpage/photo.svg" alt="photographer">
-                <div>
-                    <h2>Всем привет, давайте знакомиться!</h2>
-                    <h3>
-                        Меня зовут Ксения , я фотограф. <br/>
-                        В данный момент работаю в городе Каменское и Днепр. <br/>
-                        Обожаю снимать свадьбы, детей и семейные фотосессии! <br/>
-                    </h3>
-                </div>
-            </div>
-            <h1>Мой опыт и достижения</h1>
-            <div class="main_secondpart">
-                <div>
-                    <ul>
-                        <li>7 лет</li>
-                        <li>Занимаюсь фотографией</li>
-                    </ul>
-                    <ul>
-                        <li>Участвовала</li>
-                        <li>В фотовыставке “dream team”</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Я окончила фотошколу</li>
-                        <li>Сергея Штепы</li>
-                    </ul>
-                    <ul>
-                        <li>Окончила мастер класс</li>
-                        <li>Александра Боцмана</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Мастер класс</li>
-                        <li>
-                            По цветокоррекции и обработке <br/>
-                            у Сергея Штепы
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>300 свадеб</li>
-                        <li>и семейных фотосессий</li>
-                    </ul>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <ul class="footer_social-media">
-                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
-                
+          </div>
+          <div>
+            <ul>
+              <li>Я окончила фотошколу</li>
+              <li>Сергея Штепы</li>
             </ul>
-            <h2>
-                Семейный и свадебный фотограф <br/>
-                Ксения Крестьянинова 
-            </h2>
-            <a href="tel:+380671654104" class="footer_number">+380671654104</a>
-        </footer>
+            <ul>
+              <li>Окончила мастер класс</li>
+              <li>Александра Боцмана</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Мастер класс</li>
+              <li>
+                По цветокоррекции и обработке <br />
+                у Сергея Штепы
+              </li>
+            </ul>
+            <ul>
+              <li>300 свадеб</li>
+              <li>и семейных фотосессий</li>
+            </ul>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <ul class="footer_social-media">
+          <a href="https://instagram.com/photograf_dndz?igshid=YmMyMTA2M2Y=">
+            <img src="../img/homepage/footer/instagram.svg" alt="Инстаграм" />
+          </a>
+          <a href="https://www.facebook.com/groups/1374235009570518/?ref=share">
+            <img src="../img/homepage/footer/facebook.svg" alt="Фейсбук" />
+          </a>
+          <a href="https://t.me/ksyphotograph">
+            <img src="../img/homepage/footer/telegram.svg" alt="Телеграм" />
+          </a>
+          <a href="https://mywed.com/ru/photographer/mysja/">
+            <img src="../img/homepage/footer/mywed.svg" alt="mywed" />
+          </a>
+        </ul>
+        <h2>
+          Семейный и свадебный фотограф <br />
+          Ксения Крестьянинова
+        </h2>
+        <a href="tel:+380671654104" class="footer_number">+380671654104</a>
+      </footer>
     </div>
-</body>
+
+    <script src="../main.js"></script>
+  </body>
 </html>
