--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -1,59 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../sixthpage/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../sixthpage/style.css" />
     <title>Контакты</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="wrapper">
-        <header>
-            <ul>
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
-                <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+      <header>
+        <ul>
+          <li><a href="../index.html">Главная</a></li>
+          <li><a href="../secondpage/secondpage.html">Обо мне</a></li>
+          <li><a href="../thirdpage/thirdpage.html">FAQ</a></li>
+        </ul>
+        <img src="../img/homepage/header/лого.svg" alt="Логотип" />
+        <ul>
+          <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
+          <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <div onclick="burgerCross()" class="burger" id="burger">
+          <span></span> <span></span>
+        </div>
+        <div class="burger_open" id="burger_open">
+          <div class="burger_open_body">
+            <ul onclick="burgerLinks()">
+              <li>
+                <a id="burger_item" href="../index.html">Главная</a></li>
+              <li>
+                <a id="burger_item" href="../secondpage/secondpage.html">Обо мне</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../thirdpage/thirdpage.html">FAQ</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../fourthpage/fourthpage.html">Цены</a>
+              </li>
+              <li>
+                <a id="burger_item" href="../fifthpage/fifthpage.html">Отзывы</a>
+              </li>
+              <li>
+                <a id="burger_item" href="#">Контакты</a>
+              </li>
             </ul>
-            <img src="../img/homepage/header/лого.svg" alt="Логотип">
-            <ul>
-                <li><a href="../fourthpage/fourthpage.html">Цены</a></li>
-                <li><a href="../fifthpage/fifthpage.html">Отзывы</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <div class="burger">
-                <span></span>
-                <span></span>
-            </div>
-        </header>
-        <main>
-            <img src="../img/sixthpage/photo.svg" alt="">
-            <h1>
-                Можете связаться со мной любым удобным для Вас <br />
-                способом:
-            </h1>
-            <div class="main_socials">
-                <a href="#">Позвонить</a>
-                <a href="#">Написать в инстаграм</a>
-                <a href="#">Написать в фейсбук</a>
-                <a href="#">Написать в телеграмм</a>
-            </div>
-        </main>
-        <footer>
-            <ul class="footer_social-media">
-                <a href="#"><img src="../img/homepage/footer/instagram.svg" alt="Инстаграм"></a>
-                <a href="#"><img src="../img/homepage/footer/facebook.svg" alt="Фейсбук"></a>
-                <a href="#"><img src="../img/homepage/footer/telegram.svg" alt="Телеграм"></a>
-                <a href="https://mywed.com/ru/photographer/mysja/"><img src="../img/homepage/footer/mywed.svg" alt="mywed"></a>
-                
-            </ul>
-            <h2>
-                Семейный и свадебный фотограф <br />
-                Ксения Крестьянинова 
-            </h2>
-            <a href="tel:+380671654104" class="footer_number">+380671654104</a>
-        </footer>
+          </div>
+        </div>
+      </header>
+      <main>
+        <img src="../img/sixthpage/photo.svg" alt="" />
+        <h1>
+          Можете связаться со мной любым удобным для Вас <br />
+          способом:
+        </h1>
+        <div class="main_socials">
+          <a href="#">Позвонить</a>
+          <a href="#">Написать в инстаграм</a>
+          <a href="#">Написать в фейсбук</a>
+          <a href="#">Написать в телеграмм</a>
+        </div>
+      </main>
+      <footer>
+        <ul class="footer_social-media">
+          <a href="https://instagram.com/photograf_dndz?igshid=YmMyMTA2M2Y=">
+            <img src="../img/homepage/footer/instagram.svg" alt="Инстаграм" />
+          </a>
+          <a href="https://www.facebook.com/groups/1374235009570518/?ref=share">
+            <img src="../img/homepage/footer/facebook.svg" alt="Фейсбук" />
+          </a>
+          <a href="https://t.me/ksyphotograph">
+            <img src="../img/homepage/footer/telegram.svg" alt="Телеграм" />
+          </a>
+          <a href="https://mywed.com/ru/photographer/mysja/">
+            <img src="../img/homepage/footer/mywed.svg" alt="mywed" />
+          </a>
+        </ul>
+        <h2>
+          Семейный и свадебный фотограф <br />
+          Ксения Крестьянинова
+        </h2>
+        <a href="tel:+380671654104" class="footer_number">+380671654104</a>
+      </footer>
     </div>
-</body>
+
+    <script src="../main.js"></script>
+  </body>
 </html>
