ready to use(fixed images by compressing it, added links

--- a/sixthpage/sixthpage.html
+++ b/sixthpage/sixthpage.html
@@ -55,10 +55,10 @@
           способом:
         </h1>
         <div class="main_socials">
-          <a href="#">Позвонить</a>
-          <a href="#">Написать в инстаграм</a>
-          <a href="#">Написать в фейсбук</a>
-          <a href="#">Написать в телеграмм</a>
+          <a href="tel:+380671654104">Позвонить</a>
+          <a href="https://instagram.com/photograf_dndz?igshid=YmMyMTA2M2Y=">Написать в инстаграм</a>
+          <a href="https://www.facebook.com/groups/1374235009570518/?ref=share">Написать в фейсбук</a>
+          <a href="https://t.me/ksyphotograph">Написать в телеграмм</a>
         </div>
       </main>
       <footer>
