--- a/index.html
+++ b/index.html
@@ -41,65 +41,65 @@
         </header>
         <main>
             <div class="firstcolumn">
-                <img src="./img/homepage/photos/firstcolumn/1.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/2.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/3.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/4.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/5.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/6.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/7.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/8.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/9.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/10.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/11.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/12.svg" alt="">
-                <img src="./img/homepage/photos/firstcolumn/13.svg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/1.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/2.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/3.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/4.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/5.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/6.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/7.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/8.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/9.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/10.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/11.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/12.jpg" alt="">
+                <img src="./img/homepage/photos/firstcolumn/13.jpg" alt="">
             </div>
             <div class="secondcolumn">
-                <img src="./img/homepage/photos/secondcolumn/1.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/2.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/3.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/4.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/5.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/6.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/7.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/8.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/9.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/10.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/11.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/12.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/13.svg" alt="">
-                <img src="./img/homepage/photos/secondcolumn/14.svg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/1.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/2.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/3.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/4.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/5.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/6.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/7.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/8.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/9.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/10.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/11.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/12.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/13.jpg" alt="">
+                <img src="./img/homepage/photos/secondcolumn/14.jpg" alt="">
             </div>
             <div class="thirdcolumn">
-                <img src="./img/homepage/photos/thirdcolumn/1.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/2.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/3.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/4.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/5.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/6.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/7.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/8.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/9.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/10.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/11.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/12.svg" alt="">
-                <img src="./img/homepage/photos/thirdcolumn/13.svg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/1.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/2.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/3.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/4.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/5.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/6.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/7.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/8.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/9.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/10.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/11.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/12.jpg" alt="">
+                <img src="./img/homepage/photos/thirdcolumn/13.jpg" alt="">
             </div>
         </main>
         <footer>
             <ul class="footer_social-media">
                 <a href="https://instagram.com/photograf_dndz?igshid=YmMyMTA2M2Y=">
-                    <img src="../img/homepage/footer/instagram.svg" alt="Инстаграм">
+                    <img src="./img/homepage/footer/instagram.svg" alt="Инстаграм">
                 </a>
                 <a href="https://www.facebook.com/groups/1374235009570518/?ref=share">
-                    <img src="../img/homepage/footer/facebook.svg" alt="Фейсбук">
+                    <img src="./img/homepage/footer/facebook.svg" alt="Фейсбук">
                 </a>
                 <a href="https://t.me/ksyphotograph">
-                    <img src="../img/homepage/footer/telegram.svg" alt="Телеграм">
+                    <img src="./img/homepage/footer/telegram.svg" alt="Телеграм">
                 </a>
                 <a href="https://mywed.com/ru/photographer/mysja/">
-                    <img src="../img/homepage/footer/mywed.svg" alt="mywed">
+                    <img src="./img/homepage/footer/mywed.svg" alt="mywed">
                 </a>
             </ul>
             <h2>
