--- a/thirdpage/thirdpage.html
+++ b/thirdpage/thirdpage.html
@@ -201,7 +201,7 @@
 
             <h4>
               Ознакомится с ценами на услуги Вы можете в разделе
-              <a href="#">«Цены»</a>
+              <a href="../fourthpage/fourthpage.html">«Цены»</a>
             </h4>
           </div>
 
